--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.20.1",
     "axios": "^1.7.4",
+    "devextreme": "^24.1.5",
+    "devextreme-react": "^24.1.5",
     "framer-motion": "^11.3.28",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.12.7",
