--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@ant-design/charts": "^2.1.2",
     "@ant-design/icons": "^5.4.0",
+    "@apollo/client": "^3.11.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +14,7 @@
     "devextreme": "^24.1.5",
     "devextreme-react": "^24.1.5",
     "framer-motion": "^11.3.28",
+    "graphql": "^16.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
