--- a/package.json
+++ b/package.json
@@ -6,28 +6,34 @@
     "@ant-design/charts": "^2.1.2",
     "@ant-design/icons": "^5.4.0",
     "@apollo/client": "^3.11.4",
+    "@craco/craco": "^7.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.20.1",
     "axios": "^1.7.4",
+    "craco-less": "^3.0.1",
     "devextreme": "^24.1.5",
     "devextreme-react": "^24.1.5",
     "framer-motion": "^11.3.28",
     "graphql": "^16.9.0",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "react-social-login-buttons": "^4.1.0",
+    "react-toastify": "^10.0.5",
+    "react-tsparticles": "^2.12.2",
     "recharts": "^2.12.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test"
   },
   "eslintConfig": {
     "extends": [
