--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-toastify": "^10.0.5",
     "react-tsparticles": "^2.12.2",
     "recharts": "^2.12.7",
+    "styled-components": "^6.1.12",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
