--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "graphql": "^16.9.0",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
+    "professional-ai-chatbot": "^1.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
